--- a/frontend/stockload/index.html
+++ b/frontend/stockload/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/png" href="Marcelo Chavan - Perfil 1 - ISO.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Marcelö Chavan</title>
 </head>
